fix card spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -110,7 +110,6 @@ p {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 2rem;
-        align-items: start;
     }
 }
 
@@ -157,6 +156,7 @@ p {
     border-radius: 7px;
     margin-right: auto;
     font-size: .8rem;
+    margin-top: auto;
 }
 
 .page-container {
